Fixed vertical alignment

--- a/css/custom/_main.scss
+++ b/css/custom/_main.scss
@@ -64,6 +64,10 @@ body#homini{
       text-align: right;
     }
 
+    #nav-main{
+      margin-top: 25px;
+    }
+
     .content{
       min-height: 300px;
 
@@ -75,6 +79,7 @@ body#homini{
         padding: 10px 10px 10px 55px;
         margin: 20px 0px;
         position: relative;
+        display: table;
 
         font-size: 1.1em;
 
@@ -84,6 +89,11 @@ body#homini{
 
         @media (min-width: $screen-md){
           font-size: 1.6em;
+        }
+
+        p{
+          display: table-cell;
+          vertical-align: middle;
         }
 
         .btn{
@@ -104,6 +114,7 @@ body#homini{
           background-image: url("../img/markerback_small.png");
           font-size: 1.1em;
           padding-left: 25px;
+          width: 100%;
 
           &:before{
             content: url("../img/marker_small.png");
